--- a/example/src/App.css
+++ b/example/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
+body {
+  background-color: azure;
+  font-size: 1.2rem;
+  line-height: 1.4rem;
+  font-weight: 300;
+  color: #333;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 1em;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 100vw;
+  overflow: hidden;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+  background: white;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  gap: 5em;
 }
